force-app/main/default/objects/InsurancePolicyAsset/InsurancePolicyAsset.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>