force-app/main/default/objects/InsurancePolicyAsset/fields/Asset_Location__c.field-meta.xml
<CustomField>
    <fullName>Asset_Location__c</fullName>
    <label>Asset Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>