force-app/main/default/objects/InsurancePolicyAsset/fields/GT__c.field-meta.xml
<CustomField>
    <fullName>GT__c</fullName>
    <description>마린 관리 필드</description>
    <label>GT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>