force-app/main/default/objects/InsurancePolicyAsset/fields/HullType__c.field-meta.xml
<CustomField>
    <fullName>HullType__c</fullName>
    <description>마린 관리 필드</description>
    <label>Hull Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DH(Double Hull)</fullName>
            </value>
            <value>
                <fullName>SBT(Segregated Ballast Tanks)</fullName>
            </value>
            <value>
                <fullName>SH(Single Hull)</fullName>
            </value>
            <value>
                <fullName>DSB(Double Side/Double Bottom)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>