force-app/main/default/objects/InsurancePolicyAsset/fields/InsuredCapacity__c.field-meta.xml
<CustomField>
    <fullName>InsuredCapacity__c</fullName>
    <description>마린 관리 필드</description>
    <label>Insured Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>TCL</fullName>
            </value>
            <value>
                <fullName>BBC</fullName>
            </value>
            <value>
                <fullName>VCL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>