force-app/main/default/objects/InsurancePolicyAsset/fields/MarineInsurance_is__c.field-meta.xml
<CustomField>
    <fullName>MarineInsurance_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marine Insurance</label>
    <type>Checkbox</type>
</CustomField>