force-app/main/default/objects/InsurancePolicyAsset/fields/TermPremium__c.field-meta.xml
<CustomField>
    <fullName>TermPremium__c</fullName>
    <label>Term Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>