force-app/main/default/objects/InsurancePolicyAsset/fields/TotalTermAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalTermAmount__c</fullName>
    <label>Total Term Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>