force-app/main/default/objects/InsurancePolicyAsset/fields/VesselType__c.field-meta.xml
<CustomField>
    <fullName>VesselType__c</fullName>
    <label>Vessel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dry</fullName>
            </value>
            <value>
                <fullName>Tanker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>