force-app/main/default/objects/InsurancePolicyAsset/fields/VoyageArea__c.field-meta.xml
<CustomField>
    <fullName>VoyageArea__c</fullName>
    <label>Voyage Area</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>